--- a/src/styles/TodaysShowsComponent.css
+++ b/src/styles/TodaysShowsComponent.css
@@ -75,7 +75,7 @@
 
 @media screen and (min-width: 768px) {
   .todays-shows-main {
-    background-image: url('../assets/Livefanatic.png');
+    background-color: rgb(0, 0, 0);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
